# n0ne

./: .gitignore  0.2.txt  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  v02_checklist.txt
.github/workflows/: ci.yml
compiler/ast/: Cargo.toml
compiler/cli/: Cargo.toml
compiler/cli/src/: lsp.rs  main.rs
compiler/cli/tests/: helpers.rs  integration_tests.rs
compiler/cli/tests/codegen/: mod.rs
compiler/cli/tests/codegen/snapshots/: integration_tests__codegen__ast_prog1.snap  integration_tests__codegen__ast_prog2.snap  integration_tests__codegen__ast_prog3.snap  integration_tests__codegen__ast_prog4.snap  integration_tests__codegen__ast_prog5.snap  integration_tests__codegen__formatted_ugly.snap  integration_tests__codegen__hello_world_ir.snap  integration_tests__codegen__lexer_token_stream_prog1.snap  integration_tests__codegen__lexer_token_stream_prog2.snap  integration_tests__codegen__lexer_token_stream_prog3.snap  integration_tests__codegen__lexer_token_stream_prog4.snap  integration_tests__codegen__lexer_token_stream_prog5.snap
compiler/cli/tests/integration/: mod.rs
compiler/cli/tests/lexer/: mod.rs
compiler/cli/tests/parser/: mod.rs
compiler/cli/tests/sema/: mod.rs
examples/cli/: main.n0
packaging/: build-linux.sh  build-windows.ps1
plan/: 01_memory_model.txt  02_concurrency.txt  03_ffi.txt  04_module_system.txt  05_strings.txt  06_numeric_types.txt  07_entry_point.txt  08_formal_grammar.txt  09_error_handling.txt  10_testing_guide.txt
scripts/: install.ps1  install.sh
tests/: integration_tests.rs
(+42 files in other folders)
