[package]
name = "n0ne"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
ast = { path = "../ast" }
sema = { path = "../sema" }
codegen_llvm = { path = "../codegen/llvm" }
formatter = { path = "../../tools/formatter" }

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
tempfile = "3.12.0"

